<resources>
    <string name="app_name">Bahtzee</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home</string>
    <string name="second_fragment_label">Play Game</string>
    <string name="third_fragment_label">Score Table</string>
    <string name="startGame">Start Game</string>
    <string name="previous">Allocate Score</string>

    <string name="hello_first_fragment">Click Start Game to begin\n\nThe
        top of the screen shows current scores\n\nEach
        round consists of three rolls with a total of 13 rounds\n\nAfter
        rolling the dice you can lock\nthe next dice by clicking on the\ndice, dice
        can not be unlocked\n\nAfter rolling all three rounds\nclick score round\n\nFrom
        the scoring page select a possible score and continue the next round\n\nEnjoy!
    </string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings for the tables-->
    <string name="one">1\'s</string>
    <string name="two">2\'s</string>
    <string name="three">3\'s</string>
    <string name="four">4\'s</string>
    <string name="five">5\'s</string>
    <string name="six">6\'s</string>

    <string name="tok">3o\'kind</string>
    <string name="fok">4o\'kind</string>
    <string name="full_house">Full House</string>
    <string name="sm_straight">Sm. Strt.</string>
    <string name="lrg_straight">Lg. Strt.</string>
    <string name="chance">Chance</string>

    <string name="yahtzee">Yahtzee</string>
    <string name="yahtzee_bonus">Y Bonus</string>
    <string name="up_bonus">Up Bonus</string>
    <string name="up_total">Up Total</string>
    <string name="low_total">Low Total</string>
    <string name="total">Grand Total</string>

    <string name="d1">Die 1</string>
    <string name="d2">Die 2</string>
    <string name="d3">Die 3</string>
    <string name="d4">Die 4</string>
    <string name="d5">Die 5</string>

    <string name="zero">0</string>
    <string name="zeroScore">0</string>

    <string name="roll1">Roll Dice</string>
    <string name="roll2">Roll Dice</string>
    <string name="roll3">Roll Dice</string>

    <string name="score_round">Score Round</string>
    <string name="round_number">Round Number: </string>
    <string name="upper_total">Upper Total: </string>
    <string name="lower_total">Lower Total: </string>
    <string name="grand_total">Grand Total: </string>
</resources>